@@ -1,3 +1,5 @@
+=encoding utf-8
+
 =head1 NAME
 
 AnyEvent::Intro - an introductory tutorial to AnyEvent
