@@ -9,7 +9,11 @@ TODO: AnyEvent::Handle with AnyEvent::IO?
 TODO: invalid. and localhost. specialcasing inside AEDNS and not AESocket (rfc6761)
 TODO: maybe implement env variable to give hosts precedence
 
+TODO: newer openssl versions don't like 0-byte writes, work around
 TODO: mention AnyEvent::fork etc.
+TODO: mention AnyEvent::Impl::IOAsync::set_loop (also implement get_loop).
+TODO: From: Maxime Soulé <btik-cpan@scoubidou.com>    verify_peername => [ 2, 0, 0 ]
+	- added cbor read and write types to AnyEvent::Handle (using CBOR::XS).
         - calling AnyEvent->now_update with AnyEvent::Impl::Perl caused an
           endless loop (reported by Dietrich Rebmann).
         - add tlsv1_1 and tlsv1_2 protocols to AnyEvent::TLS
@@ -17,6 +21,7 @@ TODO: mention AnyEvent::fork etc.
 	- force a toplevel domain name in t/81_hosts.t (analyzed by
           David Jack Wange Olrik).
         - document that AnyEvent::Log uses AnyEvent::IO.
+        - time for an =encoding directive.
 
 7.05 Wed Aug 21 10:38:08 CEST 2013
 	- uts46data.pl couldn't be found due to wrong naming of the file
